--- a/src/Components/comments.module.css
+++ b/src/Components/comments.module.css
@@ -20,3 +20,19 @@
 .commentsContent p{
     margin-top: 1rem;
 }
+
+.commentsContent img{
+    width: 18rem;
+    object-fit: cover;
+    height: auto;
+    border-radius: 8px;
+}
+
+.comments a{
+    text-decoration: none;
+    color: var(--gray-100);
+}
+
+.comments a:hover{
+    color: var(--green-500);
+}
