--- a/src/app.module.css
+++ b/src/app.module.css
@@ -1,6 +1,6 @@
 .wrapper{
     display: grid;
-    /* Três colunas */
+    /* 2 colunas */
     grid-template-columns: 256px auto; 
     max-width: 70rem;
     margin: 0 auto;
