--- a/src/Components/sidebar.module.css
+++ b/src/Components/sidebar.module.css
@@ -1,9 +1,11 @@
 .sidebar{
     background-color: var(--gray-800);
     border-radius: 10px;
+    max-height: 362px;
 }
 
 .cover{
+    border-radius: 10px;
     width: 100%;
     height: 80px;
     /* Ajustar imagem de acordo com os 80 px de altura */
